--- a/public/stylesheets/test.html
+++ b/public/stylesheets/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>test1</p>
+    <p>test</p>
     <p>master</p>
     <p>update master</p>
     <p>update test</p>
