--- a/public/stylesheets/test.html
+++ b/public/stylesheets/test.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello rohit</p>
-    <P>test</P>
+    <p>hello rohit test</p>
 </body>
 </html>
